Every RenderLayer should not have to remove itself from the scrollableArea set https://bugs.webkit.org/show_bug.cgi?id=154311

Reviewed by Zalan Bujtas.

A subset of RenderLayers are are scrollable, and get registered on the FrameView,
but we pay the cost of a hash lookup for removal on every RenderLayer, which is a waste.

Store a bit that tells RenderLayer that it's in the set and needs to be removed.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::RenderLayer):
(WebCore::RenderLayer::~RenderLayer):
(WebCore::RenderLayer::calculateClipRects):
* rendering/RenderLayer.h:

Canonical link: https://commits.webkit.org/172426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196666 268f45cc-cd09-0410-ab3c-d52691b4dbfc